[project]
name = "bluepy-scratch-link"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bluepy>=1.3.0",
    "pybluez",
    "websockets>=15.0.1",
]

[tool.uv.sources]
# includes https://github.com/pybluez/pybluez/pull/488
pybluez = { git = "https://github.com/kbudde/pybluez.git" }
